# transactionscsvhs

./: transactions.cabal
data/: transactions.csv
exe/: Main.hs  SummaryMain.hs
src/: Transactions.hs
