name:                transactions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iamteem/transactionshs#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Medina
maintainer:          iamteem@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable transactions
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transactions

library
  hs-source-dirs:      src
  exposed-modules:     Transactions
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , bytestring >= 0.10
                     , vector >= 0.11
                     , text >= 1.2
                     , time >= 1.6
                     , vector-algorithms >= 0.7
                     , split
  default-language:    Haskell2010